--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/image_tagger",
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
