--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-masonry-css": "^1.0.16",
     "react-modal": "^3.16.3",
     "react-p5": "^1.4.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-zoom-pan-pinch": "^3.7.0",
     "styled-components": "^6.1.14"
   },
   "scripts": {
