deployar automatizado, botón de buscar

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,7 @@
 REACT_APP_API_URL=/image_tagger/api
 REACT_APP_IMAGE_URL=/image_tagger
+DEPLOY_FTP_USER=
+DEPLOY_FTP_PASSWORD=
+DEPLOY_FTP_HOST=
+DEPLOY_FTP_PORT=
+DEPLOY_FTP_PATH=
